--- a/src/app/CountryApp/pages/home/home.component.html
+++ b/src/app/CountryApp/pages/home/home.component.html
@@ -1,4 +1,13 @@
 <div class="d-flex align-items-center justify-content-between">
   <app-input></app-input>
-  <app-filters class="h-100"></app-filters>
+  <app-filters class="h-100" [regions]="regions"></app-filters>
+</div>
+
+<div class="row mt-5">
+  <ng-template  ngFor let-country [ngForOf]="countries" >
+    <div class="col-md-4 col-lg-4 col-xl-4 col-xxl-4 mb-5">
+      <app-card-country [country]="country"></app-card-country>
+    </div>
+  </ng-template>
+
 </div>
