se implemento el buscador de paises

--- a/src/app/CountryApp/layout/layout.component.html
+++ b/src/app/CountryApp/layout/layout.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
 <main>
   <div class="container">
+    <app-spinner></app-spinner>
     <router-outlet></router-outlet>
   </div>
 </main>
