--- a/src/app/CountryApp/pages/home/home.component.html
+++ b/src/app/CountryApp/pages/home/home.component.html
@@ -10,7 +10,9 @@
   <ng-template ngIf="!isError">
     <ng-template  ngFor let-country [ngForOf]="countries" >
       <div class="col-md-4 col-lg-4 col-xl-4 col-xxl-4 mb-5">
-        <app-card-country [country]="country"></app-card-country>
+        <a [routerLink]="['/pais', country.alpha2Code]">
+          <app-card-country [country]="country"></app-card-country>
+        </a>
       </div>
     </ng-template>
   </ng-template>
