--- a/src/app/CountryApp/shared/header/header.component.html
+++ b/src/app/CountryApp/shared/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="header shadow p-4 fixed-top">
   <div class="container d-flex justify-content-between align-items-center">
     <h1 class="mb-0">Where in the world?</h1>
-    <button class="d-flex btn">
+    <button class="d-flex btn" (click)="onDark()">
       <svg id="i-moon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"  fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="btn__icon">
         <path d="M14 2C 9 2 3 7 3 15 3 23 9 29 17 29 25 29 30 23 30 18 19 25 7 13 14 2Z" />
       </svg>
